[project]
name = "lilith-core"
version = "0.1.0"
description = "Shared core components for Lilith agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "mcp>=1.0.0",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]
