[project]
name = "lilith-core"
version = "0.1.0"
description = "Shared core components for Lilith agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "mcp>=1.0.0",
    "pgvector>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "mypy>=1.13.0", "pytest>=8.0.0"]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "TCH", "PTH", "N", "W"]
ignore = ["E501", "UP046"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]
